--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,8 @@
   "liveSassCompile.settings.excludeList": [
     "/**/node_modules/**",
     "/.vscode/**",
-    "/sass/**"
+    "/sass/**",
+    "/lesson7/**"
   ],
   "liveServer.settings.port": 5501,
 }
