Lesson9 ファイル作成Sass前まで

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,7 +12,8 @@
     "/**/node_modules/**",
     "/.vscode/**",
     "/sass/**",
-    "/lesson7/**"
+    "/lesson7/**",
+    "/lesson8/**"
   ],
   "liveServer.settings.port": 5501,
 }
